--- a/index.html
+++ b/index.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
   <head>
     <title>Todo App</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" 
+          rel="stylesheet">
+    <link rel="stylesheet" 
+          href="style.css" 
+          media="screen" 
+          charset="utf-8">
   </head>
-  <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <body class="body">
+    <div class="header wrapper">
+      <img class="header__img" src="./eisenhower-matrix.jpg">
+      <a class="header__link" 
+         href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+    <div class="todo-tasks">
+      <p class="todo-tasks__add"><label class="todo-tasks__label" for="new-task">Add Item</label>
+        <div class="todo-tasks__row">
+          <input id="new-task" class="todo-tasks__input todo-tasks__input__add" type="text">
+          <button class="btn">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox"><label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="todo-task__title">Todo</h3>
+      <ul class="todo-tasks__incompleted list">
+        <li class="list__item">
+          <input class="list__item__checkbox" type="checkbox"><label class="list__item__label">Pay Bills</label>
+          <input type="text" class="todo-tasks__input">
+          <button class="btn btn__edit">Edit</button>
+          <button class="btn btn__delete">
+            <img class="btn__delete__img" src="./remove.svg">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox"><label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="list__item edit-mode">
+          <input class="list__item__checkbox" type="checkbox"><label class="list__item__label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="todo-tasks__input">
+          <button class="btn btn__edit">Save</button>
+          <button class="btn btn__delete">
+            <img class="btn__delete__img" src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked><label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-          <img src="./remove.svg">
+      <h3 class="todo-task__title">Completed</h3>
+      <ul class="todo-tasks__completed list">
+        <li class="list__item">
+          <input class="list__item__checkbox" checked><label class="list__item__label">See the Doctor</label>
+          <input type="text" class="todo-tasks__input">
+          <button class="btn btn__edit">Edit</button>
+          <button class="btn btn__delete">
+          <img class="btn__delete__img" src="./remove.svg">
           </button>
         </li>
       </ul>
