--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a class="header__link" 
          href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="todo-tasks">
+    <div class="todo-tasks wrapper">
       <p class="todo-tasks__add"><label class="todo-tasks__label" for="new-task">Add Item</label>
         <div class="todo-tasks__row">
           <input id="new-task" class="todo-tasks__input todo-tasks__input__add" type="text">
@@ -43,7 +43,7 @@
       <h3 class="todo-task__title">Completed</h3>
       <ul class="todo-tasks__completed list">
         <li class="list__item">
-          <input class="list__item__checkbox" checked><label class="list__item__label">See the Doctor</label>
+          <input class="list__item__checkbox" type="checkbox" checked><label class="list__item__label">See the Doctor</label>
           <input type="text" class="todo-tasks__input">
           <button class="btn btn__edit">Edit</button>
           <button class="btn btn__delete">
