--- a/index.html
+++ b/index.html
@@ -9,49 +9,53 @@
           charset="utf-8">
   </head>
   <body class="body">
-    <div class="header wrapper">
+    <header class="header wrapper">
       <img class="header__img" src="./eisenhower-matrix.jpg">
       <a class="header__link" 
          href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="todo-tasks wrapper">
-      <p class="todo-tasks__add"><label class="todo-tasks__label" for="new-task">Add Item</label>
+    </header>
+    <main class="todo-tasks wrapper">
+      <section class="todo-tasks__add"><label class="todo-tasks__label" for="new-task">Add Item</label>
         <div class="todo-tasks__row">
           <input id="new-task" class="todo-tasks__input todo-tasks__input__add" type="text">
           <button class="btn">Add</button>
         </div>
-      </p>
-      <h3 class="todo-task__title">Todo</h3>
-      <ul class="todo-tasks__incompleted list">
-        <li class="list__item">
-          <input class="list__item__checkbox" type="checkbox"><label class="list__item__label">Pay Bills</label>
-          <input type="text" class="todo-tasks__input">
-          <button class="btn btn__edit">Edit</button>
-          <button class="btn btn__delete">
+      </section>
+      <section>
+        <h3 class="todo-task__title">Todo</h3>
+        <ul class="todo-tasks__incompleted list">
+          <li class="list__item">
+            <input class="list__item__checkbox" type="checkbox"><label class="list__item__label">Pay Bills</label>
+            <input type="text" class="todo-tasks__input">
+            <button class="btn btn__edit">Edit</button>
+            <button class="btn btn__delete">
+              <img class="btn__delete__img" src="./remove.svg">
+            </button>
+          </li>
+          <li class="list__item edit-mode">
+            <input class="list__item__checkbox" type="checkbox"><label class="list__item__label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="todo-tasks__input">
+            <button class="btn btn__edit">Save</button>
+            <button class="btn btn__delete">
+              <img class="btn__delete__img" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3 class="todo-task__title">Completed</h3>
+        <ul class="todo-tasks__completed list">
+          <li class="list__item">
+            <input class="list__item__checkbox" type="checkbox" checked><label class="list__item__label">See the Doctor</label>
+            <input type="text" class="todo-tasks__input">
+            <button class="btn btn__edit">Edit</button>
+            <button class="btn btn__delete">
             <img class="btn__delete__img" src="./remove.svg">
-          </button>
-        </li>
-        <li class="list__item edit-mode">
-          <input class="list__item__checkbox" type="checkbox"><label class="list__item__label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="todo-tasks__input">
-          <button class="btn btn__edit">Save</button>
-          <button class="btn btn__delete">
-            <img class="btn__delete__img" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3 class="todo-task__title">Completed</h3>
-      <ul class="todo-tasks__completed list">
-        <li class="list__item">
-          <input class="list__item__checkbox" type="checkbox" checked><label class="list__item__label">See the Doctor</label>
-          <input type="text" class="todo-tasks__input">
-          <button class="btn btn__edit">Edit</button>
-          <button class="btn btn__delete">
-          <img class="btn__delete__img" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-    </div>
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
