--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body class="body">
     <header class="header wrapper">
-      <img class="header__img" src="./eisenhower-matrix.jpg">
+      <img class="header__img" 
+           src="./eisenhower-matrix.jpg" 
+           alt="Matrix image">
       <a class="header__link" 
          href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
@@ -29,7 +31,7 @@
             <input type="text" class="todo-tasks__input">
             <button class="btn btn__edit">Edit</button>
             <button class="btn btn__delete">
-              <img class="btn__delete__img" src="./remove.svg">
+              <img class="btn__delete__img" src="./remove.svg" alt="delete image">
             </button>
           </li>
           <li class="list__item edit-mode">
@@ -37,7 +39,7 @@
             <input type="text" value="Go Shopping" class="todo-tasks__input">
             <button class="btn btn__edit">Save</button>
             <button class="btn btn__delete">
-              <img class="btn__delete__img" src="./remove.svg">
+              <img class="btn__delete__img" src="./remove.svg" alt="delete image">
             </button>
           </li>
         </ul>
@@ -50,7 +52,7 @@
             <input type="text" class="todo-tasks__input">
             <button class="btn btn__edit">Edit</button>
             <button class="btn btn__delete">
-            <img class="btn__delete__img" src="./remove.svg">
+            <img class="btn__delete__img" src="./remove.svg" alt="delete image">
             </button>
           </li>
         </ul>
