fix: id & class names in js

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="todo-tasks__add"><label class="todo-tasks__label" for="new-task">Add Item</label>
         <div class="todo-tasks__row">
           <input id="new-task" class="todo-tasks__input todo-tasks__input__add" type="text">
-          <button class="btn">Add</button>
+          <button id="btn" class="btn">Add</button>
         </div>
       </section>
       <section>
